Fix username absent right after signing in in main Settings.

BUG=676237

Review-Url: https://codereview.chromium.org/2596763002
Cr-Commit-Position: refs/heads/master@{#441621}